# Epipov-Ray

./: CMakeLists.txt  Epipov-Ray  Makefile  README.md  bulbisar.dae  main.cpp
Includes/: launcher.hpp
Includes/Algo/: minMaxKdTree.hpp
Includes/Interfaces/: IBackground.hpp  IGraphicalLibrary.hpp  IMaterial.hpp
Includes/Loader/: assimp.hpp
Includes/Modeling/: intersection.hpp  material.hpp  meshes.hpp  object.hpp  sphere.hpp  triangle.hpp
Includes/Raytracing/: raytracer.hpp
Includes/Tracing/: background.hpp  camera.hpp  handler.hpp  tracer.hpp
Includes/Utils/: color.hpp  light.hpp  orthoNormalBasis.hpp  params.hpp  pointLight.hpp  ray.hpp  sample.hpp  vector2.hpp  vector3.hpp  vertex.hpp
Sources/: launcher.cpp
Sources/Algo/: minMaxKdTree.cpp
Sources/Loader/: assimp.cpp
Sources/Modeling/: intersection.cpp  material.cpp  meshes.cpp  object.cpp  sphere.cpp  triangle.cpp
Sources/Raytracing/: raytracer.cpp
Sources/Tracing/: background.cpp  camera.cpp  handler.cpp  tracer.cpp
Sources/Utils/: color.cpp  light.cpp  orthoNormalBasis.cpp  pointLight.cpp  ray.cpp  sample.cpp  vertex.cpp
